samples/_failures_safe/1761515331_893b33_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a84f4dd8.c: In function ‘main’:
./samples/SAFE/__tmp_a84f4dd8.c:176:9: error: expected declaration or statement at end of input
  176 |         free_matrix(mat1);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_a84f4dd8.c:176:9: error: expected declaration or statement at end of input
